--- a/Test/kuleczka/style.css
+++ b/Test/kuleczka/style.css
@@ -1,4 +1,4 @@
-#stol {
+.stol {
     position: relative;
     width : 300px;
     height: 400px;
@@ -8,12 +8,22 @@
     margin: 0 auto;
   }
   
-  #kuleczka {
+  .kuleczka {
     position: absolute;
     top   : 90px;
     left  : 90px;
     width : 20px;
     height: 20px;
     background: blue;
+    border-radius: 100%;
+  }
+
+  .dziura {
+    position: absolute;
+    top   : 80%;
+    left  : 50%;
+    width : 100px;
+    height: 100px;
+    background: black;
     border-radius: 100%;
   }
