--- a/Test/kuleczka/style.css
+++ b/Test/kuleczka/style.css
@@ -14,6 +14,7 @@
     left  : 90px;
     width : 20px;
     height: 20px;
+    z-index: 1000;
     background: blue;
     border-radius: 100%;
   }
@@ -24,6 +25,7 @@
     left  : 50%;
     width : 50px;
     height: 50px;
+    z-index: 1000;
     background: black;
     border-radius: 100%;
   }
