--- a/Test/kuleczka/style.css
+++ b/Test/kuleczka/style.css
@@ -1,31 +1,29 @@
-.stol {
-    position: relative;
-    width : 300px;
-    height: 400px;
-    border: 5px solid silver;
-    background: azure;
-    border-radius: 10px;
-    margin: 0 auto;
-  }
-  
-  .kuleczka {
-    position: absolute;
-    top   : 90px;
-    left  : 90px;
-    width : 20px;
-    height: 20px;
-    z-index: 1000;
-    background: blue;
-    border-radius: 100%;
-  }
+div.garden {
+  position: relative;
+  width : 80%;
+  height: 600px;
+  border: 5px solid #043d6b;
+  border-radius: 10px;
+  background-color: azure;
+  margin: 0 auto;
+}
 
-  .dziura {
-    position: absolute;
-    top   : 80%;
-    left  : 50%;
-    width : 50px;
-    height: 50px;
-    z-index: 1000;
-    background: black;
-    border-radius: 100%;
-  }
+div.ball {
+  position: absolute;
+  top   : 90px;
+  left  : 45%;
+  width : 20px;
+  height: 20px;
+  background: green;
+  border-radius: 100%;
+}
+
+div.hole {
+  position: absolute;
+  top   : 500px;
+  left  : 45%;
+  width : 30px;
+  height: 30px;
+  background:black;
+  border-radius: 100%;
+}
