--- a/Test/kuleczka/style.css
+++ b/Test/kuleczka/style.css
@@ -14,7 +14,7 @@ div.ball {
   left  : 140px;
   width : 20px;
   height: 20px;
-  background: green;
+  background: red;
   border-radius: 100%;
 }
 
